Fix HTML formatting and update content

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
             </p>
             <div class="hero-buttons">
                 <a href="#contact" class="primary-btn">Let's Connect</a>
-                <a href="James.pdf" class="secondary-btn" download>Download Resume</a>
+                <a href="James.pdf" class="secondary-btn" target="_blank">
+    Download Resume
+</a>
+
             </div>
         </div>
     </section>
@@ -106,3 +109,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
