Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
             </p>
             <div class="hero-buttons">
                 <a href="#contact" class="primary-btn">Let's Connect</a>
-                <a href="James.pdf" class="secondary-btn" target="_blank">
-    Download Resume
-</a>
+                <a href="./James.pdf" class="secondary-btn" target="_blank">
+                Download Resume
+            </a>
+
 
             </div>
         </div>
@@ -109,4 +110,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
