Add certifications section to index.html
Added a certifications section to highlight relevant qualifications.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 </head>
 <body>
 
-    <div class="cursor"></div>
-
     <!-- NAVBAR -->
     <nav>
         <h1>James A<span>.</span></h1>
@@ -21,8 +19,9 @@
             <li><a href="#about">About</a></li>
             <li><a href="#experience">Experience</a></li>
             <li><a href="#education">Education</a></li>
+            <li><a href="#certifications">Certifications</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact" class="btn">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
@@ -38,11 +37,9 @@
             </p>
             <div class="hero-buttons">
                 <a href="#contact" class="primary-btn">Let's Connect</a>
-                <a href="./James.pdf" class="secondary-btn" target="_blank">
-                Download Resume
-            </a>
-
-
+                <a href="James.pdf" class="secondary-btn" target="_blank">
+                    Download Resume
+                </a>
             </div>
         </div>
     </section>
@@ -85,6 +82,20 @@
         </div>
     </section>
 
+    <!-- CERTIFICATIONS -->
+    <section id="certifications" class="section">
+        <h2>Certifications</h2>
+        <div class="card">
+            <h3>The Joy of Computing using Python</h3>
+            <span>NPTEL | 2024</span>
+            <p>
+                Gained foundational Python skills enabling data analysis,
+                logical thinking, automation, and support for HR reporting,
+                recruitment metrics, and operational efficiency.
+            </p>
+        </div>
+    </section>
+
     <!-- PROJECTS -->
     <section id="projects" class="section">
         <h2>Projects</h2>
@@ -101,8 +112,10 @@
     <section id="contact" class="section contact">
         <h2>Let's Connect</h2>
         <p>Email: yestinjames975@gmail.com</p>
-        <p>Phone: 8884153574</p>
-        <a href="https://www.linkedin.com/in/yestin-james-15816a384/" target="_blank" class="primary-btn">
+        <p>Phone: +91 8884153574</p>
+        <a href="https://www.linkedin.com/in/yestin-james-15816a384/" 
+           target="_blank" 
+           class="primary-btn">
             LinkedIn Profile
         </a>
     </section>
@@ -110,5 +123,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
