Revise index.html with updated content and structure
Updated the content and structure of the index.html file, enhancing the About Me section and providing more detailed descriptions in Experience, Education, Certifications, and Projects.

--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@
 
     <!-- ABOUT -->
     <section id="about" class="section">
-        <h2>About Me</h2>
+        <h1>About Me</h1>
+        <div class="card">
         <p>
-            MBA in Human Resources with a BCA background, combining strong 
-            people management skills with technical and analytical expertise.
-            Experienced in engaging HR stakeholders and delivering digital 
-            background verification solutions to enhance hiring speed, accuracy, 
-            and compliance.
+            I am an MBA graduate in Human Resource Management with a background in Computer Applications (BCA).
+            I have a strong interest in combining HR practices with technology to improve hiring processes and business efficiency.
+            I worked as a Business Development Executive at Facto Technology, I engage with HR professionals and help organizations implement digital background verification solutions. 
+            I am passionate about learning, building professional relationships, and contributing to organizational growth through effective communication and problem-solving skills.
         </p>
+        </div>
     </section>
 
     <!-- EXPERIENCE -->
@@ -61,10 +62,12 @@
         <h2>Experience</h2>
         <div class="card">
             <h3>Business Development Executive</h3>
-            <span>Facto Technology Pvt Ltd | 2025 – 2026</span>
+            <span>Facto Technology Pvt Ltd | Sept-2025 – Jan-2026</span>
             <p>
-                Identified potential clients, engaged HR stakeholders, and positioned 
-                digital background verification solutions through consultative selling.
+                Worked on identifying potential clients and reaching out to HR professionals to understand their hiring 
+                and verification needs. Engaged with decision-makers, explained the benefits of digital background verification solutions, 
+                and supported organizations in improving their hiring process. Built strong client relationships through clear communication and consultative selling, 
+                helping companies enhance speed, accuracy, and compliance in recruitment.
             </p>
         </div>
     </section>
@@ -80,21 +83,31 @@
             <h3>BCA General</h3>
             <span>Kristu Jayanti College</span>
         </div>
+        <div class="card">
+            <h3>2nd PUC (CEBA) </h3>
+            <span>Maria Niketan College</span>
+        </div>
     </section>
 
     <!-- CERTIFICATIONS -->
     <section id="certifications" class="section">
-        <h2>Certifications</h2>
-        <div class="card">
-            <h3>The Joy of Computing using Python</h3>
-            <span>NPTEL | 2024</span>
-            <p>
-                Gained foundational Python skills enabling data analysis,
-                logical thinking, automation, and support for HR reporting,
-                recruitment metrics, and operational efficiency.
-            </p>
-        </div>
-    </section>
+    <h2>Certifications</h2>
+
+    <div class="card">
+        <h3>The Joy of Computing using Python</h3>
+        <span>NPTEL | 2024</span>
+        <p>
+            Gained foundational Python skills enabling data analysis,
+            logical thinking, automation, and support for HR reporting,
+            recruitment metrics, and operational efficiency.
+        </p>
+
+        <img src="nptel-certificate.png" 
+             alt="NPTEL Certificate" 
+             class="certificate-img">
+    </div>
+</section>
+
 
     <!-- PROJECTS -->
     <section id="projects" class="section">
@@ -102,8 +115,10 @@
         <div class="card">
             <h3>Eye Banking System</h3>
             <p>
-                Web-based application to manage donor and recipient information,
-                schedule eye donations, and track real-time availability.
+                The Eye Banking System is a web-based application developed to manage eye donors and recipients efficiently. 
+                The system helps store donor details, track recipient requirements, and monitor the availability of donated eyes in real time. 
+                It simplifies the coordination process between hospitals and eye banks, ensuring better organization, faster response, 
+                and improved transparency in eye donation management
             </p>
         </div>
     </section>
