Update education details and project description
Added CGPA and percentage details to education section. Enhanced project description for Eye Banking System.

--- a/index.html
+++ b/index.html
@@ -78,14 +78,17 @@
         <div class="card">
             <h3>MBA in Human Resource Management</h3>
             <span>St. Joseph's College</span>
+            <span> CGPA-7.8 </span>
         </div>
         <div class="card">
             <h3>BCA General</h3>
             <span>Kristu Jayanti College</span>
+            <span> CGPA-8 </span>
         </div>
         <div class="card">
             <h3>2nd PUC (CEBA) </h3>
             <span>Maria Niketan College</span>
+            <span> Percentage-85% </span>
         </div>
     </section>
 
@@ -111,17 +114,23 @@
 
     <!-- PROJECTS -->
     <section id="projects" class="section">
-        <h2>Projects</h2>
-        <div class="card">
-            <h3>Eye Banking System</h3>
-            <p>
-                The Eye Banking System is a web-based application developed to manage eye donors and recipients efficiently. 
-                The system helps store donor details, track recipient requirements, and monitor the availability of donated eyes in real time. 
-                It simplifies the coordination process between hospitals and eye banks, ensuring better organization, faster response, 
-                and improved transparency in eye donation management
-            </p>
-        </div>
-    </section>
+    <h2>Projects</h2>
+
+    <div class="card">
+        <h3>Eye Banking System</h3>
+
+        <p>
+            The Eye Banking System is a web-based application developed to manage eye donors and recipients efficiently. 
+            The system helps store donor details, track recipient requirements, and monitor availability in real time, 
+            improving coordination and transparency in eye donation management.
+        </p>
+
+        <img src="eye-banking-system.png" 
+             alt="Eye Banking System Project" 
+             class="project-img">
+    </div>
+</section>
+
 
     <!-- CONTACT -->
     <section id="contact" class="section contact">
